<resources>
    <string name="app_name">Cp470Project</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="launch_activity">Launch an Activity (DEBUG)</string>
    <string name="activity1">Checklist</string>
    <string name="activity2">Stress Relief</string>
    <string name="activity3">7-Day Streaks</string>
    <string name="activity4">Personal Accomplishment</string>
    <string name="activity5">Quote of the Day</string>
    <string name="activity6">Message Board</string>
    <string name="day_change_hint">Change Day</string>
    <string name="upload">Upload An Accomplishment</string>
    <string name="button_msg">List of Accomplishments</string>
    <string name="your_acc">Tell Us Your Accomplishment!</string>
    <string name="post">Post</string>
    <string name="cancel">cancel</string>
    <string name="no_post">You have not posted yet today.</string>
    <string name="d1">Day 1 - Today I got an A+ on my calculus test.</string>
    <string name="d2">Day 2 - I finished reading my novel.</string>
    <string name="d3">Day 3 - Finally bench pressed 225lbs.</string>
    <string name="d4">Day 4 - Finished my course in Python with an A-.</string>
    <string name="today">No accomplishments yet today.</string>
    <string name="login">LOGIN</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="missing_username">Please Input Username</string>
    <string name="missing_password">Please Input Password</string>
    <string name="app_title">MOTAVATO</string>
    <string name="title_activity_message_board">MessageBoard</string>
    <string name="create_post">Create Post</string>
    <string name="post_board">post</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="checklisthint">Click the + button to add a goal!</string>
    <string name="objectivetitle">Enter your goal below!</string>
    <string name="objectivedialoghint">Enter your goal here!</string>
    <string name="goaltoast">Goal added!</string>
    <string name="help">By Nicholas Sam, Mehan Sritharan, Nihal Medak, Jarod Liu, Joshua Haberly. Version 1.0.</string>
    <string name="start">Start</string>
    <string name="hold">Hold</string>
    <string name="exhale">Exhale</string>
    <string name="pause">Pause</string>
    <string name="inhale">Inhale</string>
    <string name="time">00:00</string>
    <string name="reset">Reset</string>
    <string name="enterStreak">Enter a streak to start!</string>


</resources>