<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/titleText"
        android:text="@string/launch_activity"
        android:layout_columnWeight="2"
        android:layout_gravity="center"
        android:layout_columnSpan="2"
        android:layout_height="50dp"
        />
    <Button
        android:id="@+id/activity1"
        android:text="@string/activity1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />
    <Button
        android:id="@+id/activity2"
        android:text="@string/activity2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />
    <Button
        android:id="@+id/activity3"
        android:text="@string/activity3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />
    <Button
        android:id="@+id/activity4"
        android:text="@string/activity4"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />
    <Button
        android:id="@+id/activity5"
        android:text="@string/activity5"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />
    <Button
        android:id="@+id/activity6"
        android:text="@string/activity6"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />


</GridLayout>