<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211d44"
    app:backgroundTint="@null"
    android:backgroundTintMode="src_over"
   >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="60dp" />

    <ImageView
        android:id="@+id/bgcircle.png"
        android:layout_width="276dp"
        android:layout_height="197dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/bgcircle"
        app:backgroundTint="@null"/>

    <ImageView
        android:id="@+id/icanchor"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"

        app:backgroundTint="@null"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-9dp"

        android:src="@drawable/icanchor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/custombtn"
        android:text="@string/start"
        app:backgroundTint="@null"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/custombtn"
        android:text="@string/reset"
        android:visibility="invisible"
        app:backgroundTint="@null"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="60dp"
        />

</RelativeLayout>